grpc and pgsql added

--- a/5/debian-9/Dockerfile
+++ b/5/debian-9/Dockerfile
@@ -2,7 +2,8 @@ FROM bitnami/minideb-extras:stretch-r260
 LABEL maintainer "Bitnami <containers@bitnami.com>"
 
 # Install required system packages and dependencies
-RUN install_packages ghostscript imagemagick libbz2-1.0 libc6 libcomerr2 libcurl3 libffi6 libfreetype6 libgcc1 libgcrypt20 libgmp10 libgnutls30 libgpg-error0 libgssapi-krb5-2 libhogweed4 libicu57 libidn11 libidn2-0 libjpeg62-turbo libk5crypto3 libkeyutils1 libkrb5-3 libkrb5support0 libldap-2.4-2 liblzma5 libmcrypt4 libmemcached11 libmemcachedutil2 libncurses5 libnettle6 libnghttp2-14 libp11-kit0 libpng16-16 libpq5 libpsl5 libreadline7 librtmp1 libsasl2-2 libsqlite3-0 libssh2-1 libssl1.0.2 libssl1.1 libstdc++6 libsybdb5 libtasn1-6 libtidy5 libtinfo5 libunistring0 libxml2 libxslt1.1 zlib1g
+#RUN apt-get update -y && apt-get install -y openssl zip unzip git libpq-dev memcached libmemcached-dev libz-dev autoconf build-essential
+RUN install_packages ghostscript imagemagick libbz2-1.0 libc6 libcomerr2 libcurl3 libffi6 libfreetype6 libgcc1 libgcrypt20 libgmp10 libgnutls30 libgpg-error0 libgssapi-krb5-2 libhogweed4 libicu57 libidn11 libidn2-0 libjpeg62-turbo libk5crypto3 libkeyutils1 libkrb5-3 libkrb5support0 libldap-2.4-2 liblzma5 libmcrypt4 libmemcached11 libmemcachedutil2 libncurses5 libnettle6 libnghttp2-14 libp11-kit0 libpng16-16 libpq5 libpq-dev libpsl5 libreadline7 librtmp1 libsasl2-2 libsqlite3-0 libssh2-1 libssl1.0.2 libssl1.1 libstdc++6 libsybdb5 libtasn1-6 libtidy5 libtinfo5 libunistring0 libxml2 libxslt1.1 zlib1g openssl zip unzip git libpq-dev memcached libmemcached-dev libz-dev autoconf build-essential
 RUN bitnami-pkg unpack php-7.1.26-0 --checksum 7eb823409228a314524d99c9982bc2a3c2d0f79a377fe269c40f4e24fe2a18fc
 RUN bitnami-pkg install node-8.15.0-0 --checksum ba314e8ce24c285b7096c0549a809de505f24935b61e3f52bf121b16d88a7123
 RUN bitnami-pkg install laravel-5.7.19-0 --checksum 758db4a5deeeb6718a755ef3411af9bf3874a0a9f899b4353458fd33d0cd38cf
@@ -17,6 +18,11 @@ ENV BITNAMI_APP_NAME="laravel" \
 EXPOSE 3000
 
 WORKDIR /app
+
+RUN pecl install grpc
+RUN echo "extension=grpc.so" >> /opt/bitnami/php/lib/php.ini
+RUN echo "extension=pdo_pgsql.so" >> /opt/bitnami/php/lib/php.ini
+
 USER bitnami
 ENTRYPOINT [ "/app-entrypoint.sh" ]
 CMD [ "php", "artisan", "serve", "--host=0.0.0.0", "--port=3000" ]
